# Capstone-TSFAPC

./: .buildinfo  .gitignore  Makefile  README.md  __init__.py  compile.cmd  deploy.cmd  example.py  example_dialog.py  example_dialog_base.ui  hdag.html  hierarchy.html  hierarchy.py  las2img.html  las2img.py  metadata.txt  objects.inv  patch.html  patches.py  pb_tool.cfg  pyproject.toml  resources.py  resources.qrc  run_algorithm.py  search.html  searchindex.js  setup.cfg  test.py  treesegmentation-0.0.1-py3-none-any.whl  treesegmentation.html  treesegmentation.py  treesegmentation_dialog.py  treesegmentation_dialog_base.ui  ts_cli.py  usage.html
_sources/: hierarchy.rst.txt  index.rst.txt  las2img.rst.txt  laslabel.rst.txt  patch.rst.txt  tree.rst.txt  treeseg_lib.rst.txt  treesegmentation.rst.txt  usage.rst.txt
data/: GT_Hard.tif  GT_Medium.tif
docs/: make.bat
docs/source/: conf.py  hdag.rst  index.rst  installation.rst  treesegmentation.rst  usage.rst
help/source/: conf.py  index.rst
sample_data/: GT_Easy.tif
src/treesegmentation/: hierarchy.py  las2img.py  tree.py
src/treesegmentation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_example_dialog.py  test_resources.py
tests/: pipeline_complex.json  pipeline_saveall.json  pipeline_simple.json
treeseg/: __init__.py  hdag.py  hierarchy.py  patch.py
treesegmentation/: __init__.py  hdag.py  hierarchy.py  las2img.py  laslabel.py  patch.py  tree.py  treeseg_lib.py
treesegmentation_output/easy_nno_10280d806291bda7/: easy_nno_geotiff.tif  easy_nno_pipeline.json
(+7 files in other folders)
