[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "treesegmentation"
version = "0.0.1"
description = "Tree Segmentation from aerial point clouds"
readme = "README.md"
keywords = ["tree segmentation", "Lidar", "point cloud"]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.22.3",
    "scipy",
    "GDAL",
    "PDAL",
]
